--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 
+  <!-- FONT -->
+  <link
+    href="https://fonts.googleapis.com/css?family=Anton|Lato|Montserrat:700|Open+Sans|Poppins:900|Roboto+Condensed&display=swap"
+    rel="stylesheet">
 </head>
 
 <body class="igx-typography">
