--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
   <link
     href="https://fonts.googleapis.com/css?family=Anton|Lato|Montserrat:700|Open+Sans|Poppins:900|Roboto+Condensed&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" type="text/css"
+    href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
 
 <body class="igx-typography">
