--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,12 @@
     integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 
-  <!-- FONT -->
+  <!-- FONTS -->
   <link
     href="https://fonts.googleapis.com/css?family=Anton|Lato|Montserrat:700|Open+Sans|Poppins:900|Roboto+Condensed&display=swap"
     rel="stylesheet">
+
+  <!-- FONT AWESOME -->  
   <link rel="stylesheet" type="text/css"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
 </head>
