--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,20 @@
     href="https://fonts.googleapis.com/css?family=Anton|Lato|Montserrat:700|Open+Sans|Poppins:900|Roboto+Condensed&display=swap"
     rel="stylesheet">
 
-  <!-- FONT AWESOME -->  
+  <!-- FONT AWESOME -->
   <link rel="stylesheet" type="text/css"
     href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156448656-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-156448656-1');
+  </script>
+
 </head>
 
 <body class="igx-typography">
