--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     })(window, document, 'script', 'dataLayer', 'GTM-KHWLK7X');</script>
   <!-- End Google Tag Manager -->
 
+  <meta name="google-site-verification" content="ozgsuemrJn0bmikfv4OaZ2GgqYU2mLxhM2w0HoANpUw" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="icon.ico">
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
