--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
 </head>
 
-<body>
+<body class="bg-dark">
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHWLK7X" height="0" width="0"
       style="display:none;visibility:hidden"></iframe></noscript>
