refactor: new google tag manager

--- a/src/index.html
+++ b/src/index.html
@@ -2,37 +2,37 @@
 <html lang="en">
 
 <head>
-  <base href="/">
+    <base href="/">
 
-  <!-- Google Tag Manager -->
-  <script>(function (w, d, s, l, i) {
-      w[l] = w[l] || []; w[l].push({
-        'gtm.start':
-          new Date().getTime(), event: 'gtm.js'
-      }); var f = d.getElementsByTagName(s)[0],
-        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
-          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-KHWLK7X');</script>
-  <!-- End Google Tag Manager -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Anton|Lato|Montserrat:700|Open+Sans|Poppins:900|Roboto+Condensed|Titillium+Web|Material+Icons&display=swap"
-    rel="stylesheet">
+    <!-- Google Tag Manager -->
+    <script>(function (w, d, s, l, i) {
+            w[l] = w[l] || []; w[l].push({
+                'gtm.start':
+                    new Date().getTime(), event: 'gtm.js'
+            }); var f = d.getElementsByTagName(s)[0],
+                j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+                    'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+        })(window, document, 'script', 'dataLayer', 'GTM-PVTCL9ND');</script>
+    <!-- End Google Tag Manager -->
+    <link
+        href="https://fonts.googleapis.com/css?family=Anton|Lato|Montserrat:700|Open+Sans|Poppins:900|Roboto+Condensed|Titillium+Web|Material+Icons&display=swap"
+        rel="stylesheet">
 
-  <meta name="google-site-verification" content="ozgsuemrJn0bmikfv4OaZ2GgqYU2mLxhM2w0HoANpUw" />
-  <link rel="icon" type="image/x-icon" href="icon.ico">
+    <meta name="google-site-verification" content="ozgsuemrJn0bmikfv4OaZ2GgqYU2mLxhM2w0HoANpUw" />
+    <link rel="icon" type="image/x-icon" href="icon.ico">
 
 
-  <!-- Particle.js -->
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <!-- Particle.js -->
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 
 </head>
 
 <body class="bg-dark text-white">
-  <!-- Google Tag Manager (noscript) -->
-  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KHWLK7X" height="0" width="0"
-      style="display:none;visibility:hidden"></iframe></noscript>
-  <!-- End Google Tag Manager (noscript) -->
-  <app-root></app-root>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PVTCL9ND" height="0" width="0"
+            style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <app-root></app-root>
 </body>
 
 </html>
