--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,18 @@
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
         })(window, document, 'script', 'dataLayer', 'GTM-PVTCL9ND');</script>
     <!-- End Google Tag Manager -->
+
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Styles -->
     <link
         href="https://fonts.googleapis.com/css?family=Anton|Lato|Montserrat:700|Open+Sans|Poppins:900|Roboto+Condensed|Titillium+Web|Material+Icons&display=swap"
         rel="stylesheet">
-
-    <meta name="google-site-verification" content="ozgsuemrJn0bmikfv4OaZ2GgqYU2mLxhM2w0HoANpUw" />
     <link rel="icon" type="image/x-icon" href="icon.ico">
 
-
-    <!-- Particle.js -->
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-
 </head>
 
 <body class="bg-dark text-white">
@@ -32,6 +33,7 @@
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PVTCL9ND" height="0" width="0"
             style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
+
     <app-root></app-root>
 </body>
 
