--- a/src/index.html
+++ b/src/index.html
@@ -5,14 +5,16 @@
     <base href="/">
 
     <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
+    <script>
+        (function (w, d, s, l, i) {
             w[l] = w[l] || []; w[l].push({
                 'gtm.start':
                     new Date().getTime(), event: 'gtm.js'
             }); var f = d.getElementsByTagName(s)[0],
                 j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
                     'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
-        })(window, document, 'script', 'dataLayer', 'GTM-PVTCL9ND');</script>
+        })(window, document, 'script', 'dataLayer', 'GTM-PVTCL9ND');
+    </script>
     <!-- End Google Tag Manager -->
 
     <meta charset="utf-8">
@@ -25,7 +27,7 @@
     <link rel="icon" type="image/x-icon" href="icon.ico">
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" defer></script>
 </head>
 
 <body class="bg-dark text-white">
