--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,15 @@
 <head>
     <base href="/">
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CK7W495KX8"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-CK7W495KX8');
+    </script>
     <!-- Google Tag Manager -->
     <script>
         (function (w, d, s, l, i) {
