feat: add missing a11y tasks

--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
 <head>
     <base href="/">
 
-    <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CK7W495KX8"></script>
+    <!-- Google Tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CK7W495KX8" alt="Google Analytics Script"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
@@ -26,6 +26,9 @@
     </script>
     <!-- End Google Tag Manager -->
 
+    <!--  Adsense -->
+    <!-- <meta name="google-adsense-account" content="ca-pub-8686053175570546"> -->
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -36,13 +39,13 @@
     <link rel="icon" type="image/x-icon" href="icon.ico">
 
     <!-- Scripts -->
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" defer alt="Particles.js Script"></script>
 </head>
 
 <body class="bg-dark text-white">
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-PVTCL9ND" height="0" width="0"
-            style="display:none;visibility:hidden"></iframe></noscript>
+            style="display:none;visibility:hidden" alt="Google Tag Manager"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <app-root></app-root>
