--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,21 @@
 
     <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js" defer alt="Particles.js Script"></script>
+
+    <!-- JSON-LD structured data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "WebSite",
+        "name": "Lucas Brito - Personal Website",
+        "url": "https://lucasbrito.com.br",
+        "potentialAction": {
+            "@type": "SearchAction",
+            "target": "https://lucasbrito.com.br/search?q={search_term_string}",
+            "query-input": "required name=search_term_string"
+        }
+    }
+    </script>
 </head>
 
 <body class="bg-dark text-white">
