feat: update website name and search target URL in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -43,11 +43,11 @@
     {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Lucas Brito - Personal Website",
+        "name": "Lucas de Brito Silva",
         "url": "https://lucasbrito.com.br",
         "potentialAction": {
             "@type": "SearchAction",
-            "target": "https://lucasbrito.com.br/search?q={search_term_string}",
+            "target": "https://lucasbrito.com.br/publications?search?q={search_term_string}",
             "query-input": "required name=search_term_string"
         }
     }
