refactor: update job title and description in JSON-LD structured data; enhance SEO metadata in SeparadorComponent

--- a/src/index.html
+++ b/src/index.html
@@ -52,12 +52,12 @@
             "https://github.com/Lucs1590",
             "https://linkedin.com/in/lucas-brito100/"
         ],
-        "jobTitle": "AI Engineer",
+        "jobTitle": "Machine Learning Engineer",
         "worksFor": {
             "@type": "Organization",
-            "name": "AI and Machine Learning"
+            "name": "Agibank S.A."
         },
-        "description": "AI Engineer, Machine Learning enthusiast, and Data Science professional",
+        "description": "AI Engineer, Machine Learning Engineer and Data Scientist specializing in computer vision, deep learning, and software development.",
         "knowsAbout": [
             "Artificial Intelligence",
             "Machine Learning",
